# experiments

./: .gitignore  README.md  RUNS_STRUCTURE.md  comprehensive.json  extended.json  paper-experiment-specs.md  pyproject.toml
.cursor/rules/: global.mdc  glossary.mdc  philosophy.mdc  physics.mdc
.github/agents/: my-agent.agent.md
engines/: README.md  __init__.py
engines/universal_spectroscopy/: README.md  __init__.py  engine.py  excitation.py  interference.py  sae_adapter.py  utils.py
notebooks/: README.md  visualize_results.ipynb
protocols/: __init__.py  engine.py  excitation.py  query.py  sae_adapter.py  spectrum.py  storage.py  utils.py
scripts/: README_VIEW_RESULTS.md  create_specimen.py  index_vault.py  migrate_to_runs.py  quick_stats.py  view_results.py
specimens/2024_12_19_hallucination_biopsy_gemma2/: MIGRATION_NOTES.md  QUICKSTART.md  README.md  analyze_results.py  field_notes.md  manifest.msgpack  protocol.py  quick_stats.py
specimens/2024_12_20_vn_comprehensive_experiments/: field_notes.md  manifest.msgpack  protocol.py
specimens/2024_12_20_vn_convergence_velocity/: field_notes.md  protocol.py
specimens/2024_12_20_vn_noise_robustness/: field_notes.md  manifest.msgpack  protocol.py
specimens/2025_12_20_hallucination_biopsy_gemma2/: README.md  field_notes.md  manifest.msgpack  protocol.py
specimens/2025_12_20_vn_noise_robustness/: field_notes.md  manifest.msgpack  protocol.py
specimens/2025_12_22_vn_comprehensive_experiments/: field_notes.md  manifest.msgpack  protocol.py
tests/: __init__.py  vn_test_cases.py
(+27 files in other folders)
