[project]
name = "experiments"
version = "0.1.0"
description = "ML experiment vault"
requires-python = ">=3.8"
dependencies = [
    "polars>=0.20.0",
    "zarr>=2.16.0",
    "msgpack>=1.0.0",
    "duckdb>=0.9.0",
    "numpy>=1.24.0",
    "transformer_lens",
    "sae_lens",
    "torch",
    "matplotlib",
    "plotly",
]

[tool.setuptools]
packages = ["protocols", "scripts", "engines", "engines.universal_spectroscopy", "tests"]
